--- a/Промежуточные итоги/Таблица памяти (общая).md
+++ b/Промежуточные итоги/Таблица памяти (общая).md
@@ -1,31 +1,39 @@
 
-| **Начало** | **Окончание** | **Содержание**                                        | **Комментарий**                                                                                                      |
-| ---------- | ------------- | ----------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
-| 0x10000    | 0x10107       | Инициализация                                         | Настройка обработчика прерываний machine trap, считывание другой секции ROM, вызов  функции main(), переход в L2 кэш |
-| 0x10108    | 0x1010b       | Трамплин в обработчик прерываний machine trap         |                                                                                                                      |
-| 0x1010c    | 0x1013f       | -                                                     | Нулевые значения                                                                                                     |
-| 0x10140    | 0x10149       | Обработчик прерываний machine trap                    |                                                                                                                      |
-| 0x1014a    | 0x10175       | -                                                     | Неиспользуемый код                                                                                                   |
-| ...        |               | (TBD) Main                                            |                                                                                                                      |
-| 0x10226    | 0x10257       | -                                                     | Неиспользуемый код                                                                                                   |
-| 0x10258    | 0x10275       | Чтение и запись в SPI                                 |                                                                                                                      |
-| 0x10276    | 0x1032b       | Чтение тома (Flash Bit-banged)                        |                                                                                                                      |
-| 0x1032c    | 0x10347       | -                                                     | Неиспользуемое копирование по bit-banged SPI                                                                         |
-| 0x10348    | 0x10363       | Отправка сообщения по UART                            |                                                                                                                      |
-| 0x10364    | 0x1038f       | Отправка шестнадцатеричного числа по UART             |                                                                                                                      |
-| 0x10390    | 0x103eb       | -                                                     | Неиспользуемый код                                                                                                   |
-| 0x103ec    | 0x104bf       | Поиск и копирование кода U-Boot (Flash Bit-banged)    |                                                                                                                      |
-| 0x104c0    | 0x10599       | Поиск и копирование кода U-Boot (SD Bit-Banged)       |                                                                                                                      |
-| 0x1059a    | 0x10637       | Поиск и копирование кода U-Boot (Flash Memory-Mapped) |                                                                                                                      |
-| 0x10638    | 0x10685       | -                                                     | Неиспользуемое копирование в DMA                                                                                     |
-| 0x10686    | 0x10703       | Вывод кода ошибки по UART                             |                                                                                                                      |
-| ...        |               | Загрузка U-Boot в L2 кэш                              |                                                                                                                      |
-| 0x10954    | 0x1097f       | -                                                     | Неиспользуемый код                                                                                                   |
-| 0x10980    | 0x109d5       | Поиск U-Boot в GPT                                    | Поиск тома с нужным GUID                                                                                             |
-| 0x109d6    | 0x10ab9       | -                                                     | Неиспользуемый код                                                                                                   |
-| 0x10aba    | 0x10b29       | Подготовка к чтению данных с microSD                  |                                                                                                                      |
-| ...        |               |                                                       |                                                                                                                      |
-|            | 0x10e26       |                                                       |                                                                                                                      |
-| ...        |               |                                                       |                                                                                                                      |
-| 0x13788    | 0x17fff       | Пустые регистры                                       | Нулевые значения                                                                                                     |
+| **Начало** | **Окончание** | Размер | **Содержание**                                        | **Комментарий**                                                                                                      |
+| ---------- | ------------- | ------ | ----------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
+| 0x10000    | 0x10107       | 264    | Инициализация                                         | Настройка обработчика прерываний machine trap, считывание другой секции ROM, вызов  функции main(), переход в L2 кэш |
+| 0x10108    | 0x1010b       | 4      | Трамплин в обработчик прерываний machine trap         |                                                                                                                      |
+| 0x1010c    | 0x1013f       | 52     | -                                                     | Нулевые значения                                                                                                     |
+| 0x10140    | 0x10149       | 10     | Обработчик прерываний machine trap                    |                                                                                                                      |
+| 0x1014a    | 0x10175       | 44     | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x10176    | 0x10225       | 176    | Main                                                  | TBD                                                                                                                  |
+| 0x10226    | 0x10257       | 50     | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x10258    | 0x10275       | 30     | Чтение и запись в SPI                                 |                                                                                                                      |
+| 0x10276    | 0x1032b       | 182    | Чтение тома (Flash Bit-banged)                        |                                                                                                                      |
+| 0x1032c    | 0x10347       | 28     | -                                                     | Неиспользуемое копирование по bit-banged SPI                                                                         |
+| 0x10348    | 0x10363       | 28     | Отправка сообщения по UART                            |                                                                                                                      |
+| 0x10364    | 0x1038f       | 44     | Отправка шестнадцатеричного числа по UART             |                                                                                                                      |
+| 0x10390    | 0x103eb       | 92     | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x103ec    | 0x104bf       | 212    | Поиск и копирование кода U-Boot (Flash Bit-banged)    |                                                                                                                      |
+| 0x104c0    | 0x10599       | 218    | Поиск и копирование кода U-Boot (SD Bit-Banged)       |                                                                                                                      |
+| 0x1059a    | 0x10637       | 158    | Поиск и копирование кода U-Boot (Flash Memory-Mapped) |                                                                                                                      |
+| 0x10638    | 0x10685       | 78     | -                                                     | Неиспользуемое копирование в DMA                                                                                     |
+| 0x10686    | 0x10703       | 126    | Вывод кода ошибки по UART                             |                                                                                                                      |
+| 0x10704    | 0x10953       | 592    | Загрузка U-Boot в L2 кэш                              |                                                                                                                      |
+| 0x10954    | 0x1097f       | 44     | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x10980    | 0x109d5       | 86     | Поиск U-Boot в GPT                                    | Поиск тома с нужным GUID                                                                                             |
+| 0x109d6    | 0x10ab9       | 228    | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x10aba    | 0x10b53       | 154    | Отправка команды по SPI                               |                                                                                                                      |
+| 0x10b54    | 0x10d0d       | 442    | Инициализация чтения с SD карты                       |                                                                                                                      |
+| 0x10d0e    | 0x10e27       | 282    | Чтение тома (SD Card Bit-Banged)                      |                                                                                                                      |
+| 0x10e28    | 0x10e7f       | 88     | -                                                     | Нулевые значения                                                                                                     |
+| 0x10e80    | 0x136b5       | 10294  | Devicetree                                            | Devicetree blob (`.dtb`)                                                                                             |
+| 0x136b6    | 0x136b7       | 2      | -                                                     | Нулевые значения                                                                                                     |
+| 0x136b8    | 0x1372f       | 120    | Данные                                                | LUTs                                                                                                                 |
+| 0x13730    | 0x13747       | 24     | -                                                     | Нулевые значения                                                                                                     |
+| 0x13748    | 0x13753       | 12     | Данные                                                | Строка `Error 0x`                                                                                                    |
+| 0x13754    | 0x13767       | 20     | -                                                     | Нулевые значения                                                                                                     |
+| 0x13768    | 0x13777       | 16     | Данные                                                | GUID искомого тома                                                                                                   |
+| 0x13778    | 0x13787       | 16     | Данные                                                | -                                                                                                                    |
+| 0x13788    | 0x17fff       | 18552  | -                                                     | Нулевые значения                                                                                                     |
 
